--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -20,17 +20,21 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <Button x:Name="startButton" Content="Start" Grid.Column="1" Grid.Row="3" Height="50" Width="70" Click="start_Button_Click"></Button>
-        <ProgressBar Grid.Column="2" Grid.Row="3" x:Name="progressBar" Height="20" Margin="5" Visibility="Hidden"/>
+        <Button x:Name="startFirst" Content="Start" Grid.Column="2" Grid.Row="0" Height="50" Width="70" HorizontalAlignment="Left" Click="startFirst_Click"/>
+        <Button x:Name="startSecond" Content="Start" Grid.Column="2" Grid.Row="1" Height="50" Width="70" HorizontalAlignment="Left" Click="startSecond_Click"/>
+        <Button x:Name="startThird" Content="Start" Grid.Column="2" Grid.Row="2" Height="50" Width="70" HorizontalAlignment="Left" Click="startThird_Click"/>
+
+        <Button x:Name="cancelAll" Content="Ukonči!" Grid.Column="1" Grid.Row="3" Height="50" Width="70" Click="cancelAll_Click"/>
+
 
         <TextBlock Grid.Column="0" Grid.Row="0" Text="1. Prvočíslo" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
         <TextBlock Grid.Column="0" Grid.Row="1" Text="2. Prvočíslo" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
         <TextBlock Grid.Column="0" Grid.Row="2" Text="3. Prvočíslo" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
 
 
-        <TextBlock x:Name="first_prime" Grid.Column="1" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
-        <TextBlock x:Name="second_prime" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
-        <TextBlock x:Name="third_prime" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+        <TextBlock Text="{Binding FirstPrime}" Grid.Column="1" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+        <TextBlock Text="{Binding SecondPrime}" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+        <TextBlock Text="{Binding ThirdPrime}" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
 
         <TextBox x:Name="first_condition" Text="podmínka" Grid.Column="2" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBox>
         <TextBox x:Name="second_condition" Text="podmínka" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBox>
